register & upload file
